manifests/playlistservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: playlistservice
  name: playlistservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: playlistservice
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/beatify-default: "true"
        io.kompose.service: playlistservice
    spec:
      containers:
        - image: leizheng0312/playlistservice:latest
          name: playlistservice
          resources: {}
      restartPolicy: Always
status: {}
