manifests/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/beatify-backend: "true"
        io.kompose.service: user-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: BeatifyUser
            - name: MYSQL_ROOT_PASSWORD
              value: root
          image: mysql:latest
          name: user-db
          ports:
            - containerPort: 3306
              hostPort: 3306
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/setup
              name: user-db-claim0
      restartPolicy: Always
      volumes:
        - name: user-db-claim0
          persistentVolumeClaim:
            claimName: user-db-claim0
status: {}
