manifests/apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: apigateway
status:
  loadBalancer: {}
