manifests/playlistservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: playlistservice
  name: playlistservice
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: playlistservice
status:
  loadBalancer: {}
