manifests/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-management
      protocol: TCP
      port: 15672
      targetPort: 15672
