manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: UpdateAKS
  namespace: namespace-workflow-1705319902911
spec:
  type: LoadBalancer
  selector:
    app: UpdateAKS
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
