manifests/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  ports:
    - name: "mysql-tcp"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: user-db
status:
  loadBalancer: {}
