manifests/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: userservice
  name: userservice
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: userservice
status:
  loadBalancer: {}
