manifests/playlistservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playlistservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /playlistservice
            pathType: Prefix
            backend:
              service:
                name: playlistservice
                port:
                  number: 80
