manifests/userservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /userservice
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 80
